<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.fnz.debezium.ibmi</groupId>
    <artifactId>debezium-connector-ibmi-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>parent project for debezium-connector-ibmi</name>

    <properties>
        <jt400.version>11.1</jt400.version>
        <revision>1.9.0-SNAPSHOT</revision>
        <log4j2.version>2.20.0</log4j2.version>
        <slf4j.version>1.7.29</slf4j.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <flatten.version>1.2.7</flatten.version>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
    
    <profiles>
		<profile>
			<id>external</id>
		    <activation>
				<activeByDefault>true</activeByDefault>
		    </activation>			
			 <repositories>
				<repository>
				  <id>confluent</id>
				  <name>confluent repository</name>
				  <url>https://packages.confluent.io/maven/</url>
				</repository>
			</repositories>		
		</profile>
	</profiles>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j2.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j2.version}</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-1.2-api</artifactId>
                <version>${log4j2.version}</version>
                <scope>runtime</scope>
            </dependency>
            <!-- for java util logger -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-jul</artifactId>
                <version>${log4j2.version}</version>
                <scope>runtime</scope>
            </dependency>
            <!-- for java system logger -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-jpl</artifactId>
                <version>${log4j2.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j2.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- For JSON logging -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-layout-template-json</artifactId>
                <version>${log4j2.version}</version>
            </dependency>


            <dependency>
                <groupId>net.sf.jt400</groupId>
                <artifactId>jt400-jdk9</artifactId>
                <version>${jt400.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<scope>test</scope>
				<version>5.9.2</version>
			</dependency>            
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>debezium-connector-ibmi</module>
        <module>journal-parsing</module>
        <module>structured-logging</module>
        <module>connector-health</module>
        <module>kafka-smt-collection</module>
        <module>jt400-override-ccsid</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten.version}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>none</phase> <!-- Unbind from lifecycle for this POM -->
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
